--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Website for Melbourne Substance Use Clinic",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css"
+    "compile:sass": "node-sass sass/main.scss css/style.css -w"
   },
   "repository": {
     "type": "git",
@@ -20,3 +20,5 @@
     "node-sass": "^4.13.1"
   }
 }
+
+
